opa-required-header/opa-reqd-header-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: opa-reqd-header
  namespace: gloo-system
spec:
  virtualHost:
    domains:
      # We can use the domain "*" to match on any domain, avoiding the need for a host / host header when testing the route.
      -  "*"
    routes:
      - matchers:
          - prefix: /
        routeAction:
          single:
            upstream:
              name: httpbin-us
              namespace: gloo-system
    options:
      extauth:
        configRef:
          name: jwt-opa
          namespace: gloo-system
